# websockets_proxy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
websockets_proxy/: __init__.py  websockets_proxy.py
